@@ -5,6 +5,7 @@ lintian-brush (0.101) UNRELEASED; urgency=medium
   * Depend on python3-toml to run tests - it's a recommended dependency
     of upstream-ontologist.
   * Add fixer for extended-description-contains-empty-paragraph.
+  * Add --allow-reformatting argument to deb-scrub-obsolete.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 06 Mar 2021 05:11:38 +0000
 
